--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-gh": "ng build --output-path docs --base-href /dota2-streak-probability/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
