--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "es2020",
     "module": "es2020",
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "es2020",
+      "esnext"
     ]
   },
   "angularCompilerOptions": {
